Big improvements  - Downloading in parallel  - Manual download  - Support for resourcepacks, shaderpacks, datapacks and mods  - UI for sync visualization  - Newer Widget in title screen  - Added and fixed some issues